minor changes in signup

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -138,7 +138,7 @@ button{
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password">
 
-         <button type="button" id="loginsubmitbutton">Login</button>
+         <button type="button" id="loginsubmitbutton" onMouseOver="this.style.color='#5f5c5c'"onMouseOut="this.style.color='#000000'">Login</button>
          <a href="/register">New User? SignUp</a>
     </form>
     
