--- a/views/register.hbs
+++ b/views/register.hbs
@@ -140,7 +140,7 @@ button{
         <label for="Confirmpassword">Confirm Password</label>
         <input type="password" placeholder="Confirm Password" id="Confirmpassword">
 
-         <button type="button" id="registersubmitbutton">SignUp</button>
+         <button type="button" id="registersubmitbutton" onMouseOver="this.style.color='#5f5c5c'"onMouseOut="this.style.color='#000000'">SignUp</button>
     </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="./auth.js"></script>
